Basic git commands

--- a/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -7,11 +7,11 @@
     "(version_control_git)=\n",
     "# Version control git\n",
     "\n",
-    "As a future researcher, professional or enthusiast you will find that maintaing a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also ful of pitfalls and requires a *trial-and-error* approach.  \n",
+    "As a future researcher, professional or enthusiast you will find out that maintaing a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also full of pitfalls and requires a *trial-and-error* approach.  \n",
     "\n",
     "This is where **version control** comes in. It is a software which allows you to track the development of your coding project. It also enables your peers to work on different versions of the same structure. \n",
     "\n",
-    "The most well known version control facility is [git](https://git-scm.com/) but there are others such as [mercurial](https://www.mercurial-scm.org/). We are goint to tacle the former. There are many platforms that allow to host git repositories, but the most well known one is [GitHub](https://github.com/). This is the one we are going to use. "
+    "The most well known version control facility is [git](https://git-scm.com/) but there are others such as [mercurial](https://www.mercurial-scm.org/). We are going to tackle the former. There are many platforms that allow to host git repositories, but the most well known is [GitHub](https://github.com/). This is the one we are going to use. "
    ]
   },
   {
@@ -21,9 +21,7 @@
     "## Setting up Git\n",
     "\n",
     "If you are on macOS or most distributions of Linux, you have git already configured on your machine. \n",
-    "\n",
     "For Windows, you will need to download and install [Git for Windows](https://gitforwindows.org/).\n",
-    "\n",
     "We will be accessing git via the terminal (*Git Bash* on Windows)."
    ]
   },
@@ -31,14 +29,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My first git repo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are two ways of initialising a github *repo* (= repository), one can be done via terminal only. In the second option we create a repository on Github and then connect to it with the terminal. \n",
+    "## My first Git repo\n",
+    "\n",
+    "There are two ways of initialising a github *repo* (= repository), one can be done via terminal only (with the ```git init``` command). In the second option we create a repository on Github and then connect to it with the terminal. \n",
     "\n",
     "If you want to try the first option, check out [this page](https://kbroman.org/github_tutorial/pages/init.html). Otherwise follow these steps.\n",
     "\n",
@@ -71,8 +64,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Playing with MyFirstRepo\n",
+    "## Basic Git commands\n",
     "\n",
+    "Now we will go through different commands and their effect on the repository:\n",
+    "* ```git init``` - initalizes a new Git repository and begins tracking the directory. Adds a hidden subfloder required for the version control. Have a look at the exercises if you want to try it! \n",
+    "\n",
+    "* ```git clone LINK``` - creates a copy of the repo on your machine. \n",
+    "\n",
+    "* ```git add FILE/DIRECTORY``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must to be added before the commit. It needs to be run with an argument e.g.:\n",
+    "\n",
+    "    &ensp;```git add text.txt``` - stages the ```text.txt``` file\n",
+    "    \n",
+    "    &ensp;```git add dir``` - stages the whole ```dir```\n",
+    "\n",
+    "    &ensp;```git add . ``` - stages all the unstaged files, **very common**.\n",
+    "\n",
+    "* ```git commit -m \"message\"``` - saves the snapshot in the project hostory. It works like a photo, anything staged with ```git add``` will become a part of this snapshot.\n",
+    "\n",
+    "* ```git status``` - shows which files are staged, modified or untracked.\n",
+    "\n",
+    "* ```git pull``` - updates the local repository with the changes made on the remote one. If you work in a team and you friend commited code, you might want to ```git pull``` to have those changes on your machine.\n",
+    "\n",
+    "* ```git push``` - updates the remote repository with your commits. **You need to us this command to update the code on GitHub**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git workflow\n",
     "\n"
    ]
   }
