--- a/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "    &ensp;```git add . ``` - stages all the unstaged files, **very common**.\n",
     "\n",
-    "* ```git commit -m \"message\"``` - saves the snapshot in the project hostory. It works like a photo, anything staged with ```git add``` will become a part of this snapshot.\n",
+    "* ```git commit -m \"message\"``` - saves the snapshot in the project hostory. It works like a photo, anything staged with ```git add``` will become a part of this snapshot. It is a good practice to run it with the ```-m``` flag followed by a brief message what was done. Without ```-m``` you might be prompted to do it in a terminal text editor such as Vim, read about the [Vim commands](https://www.fprintf.net/vimCheatSheet.html).\n",
     "\n",
     "* ```git status``` - shows which files are staged, modified or untracked.\n",
     "\n",
@@ -93,7 +93,58 @@
    "metadata": {},
    "source": [
     "## Git workflow\n",
-    "\n"
+    "\n",
+    "For now, the history of our project looks like that:\n",
+    "\n",
+    "```{figure} programming_tools_images/GitWorkFlowSingle.png\n",
+    ":width: 100%\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where circle denotes pushed commits. \n",
+    "\n",
+    "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such multi-branch project can have the following structure:\n",
+    "\n",
+    "```{figure} programming_tools_images/GitWorkFlow.png\n",
+    ":width: 100%\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Master** is usually the main branch of the project. All branches stem (immediately or not) from the master. When two braches become one, we say that they are *merged*. It is a good practice to merge all branches at the end of development process (unless the one of the branches is not relevant to the project). Cosider the branches from the diagram:\n",
+    "\n",
+    "* FixRunner - there was a broken runner function in the structure of the project. One of the developers branched from the Master branch to fix it and then merged them.\n",
+    "\n",
+    "* FrontEnd - the team working of the front end works created this branch not to intefere with the rest of developers. It is merged with the Master at the end of the production cycle.\n",
+    "\n",
+    "* OpenScreen - a feature developed by some people in the front end team.\n",
+    "\n",
+    "* Unused - branch that did not end end up contributing to the final verision of the project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git branch commands\n",
+    "\n",
+    "Let us consider the commands dealing with branches:\n",
+    "\n",
+    "* Where circle denotes pushed commits. \n",
+    "\n",
+    "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such multi-branch project can have the following structure:\n",
+    "\n",
+    "* ```git branch``` - this command has multiple effects depending on the arguments:\n",
+    "\n",
+    "    &ensp;```git branch``` - shows the branches being worked on locally\n",
+    "    &ensp;```git branch -a``` - \n"
    ]
   }
  ],
