--- a/notebooks/modules/math_methods_1/Matrices_Linear_Algebra.ipynb
+++ b/notebooks/modules/math_methods_1/Matrices_Linear_Algebra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Defining a matrix\n",
+    "# Matrices linear algebra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Defining a matrix\n",
     "\n",
     "Lecture 4, slide 3\n",
     "\n",
@@ -26,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dimension of A is  (3, 3)\n",
+      "The dimension of B is  (2, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "# mA is a SQUARE matrix\n",
     "mA = np.matrix([[2, 3, -4],\n",
@@ -51,16 +67,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix-scalar multiplication\n",
+    "## Matrix-scalar multiplication\n",
     "\n",
     "Lecture 4, slide 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3*D =\n",
+      " [[  6 -12   3  -6]\n",
+      " [ 21  24   0   9]]\n"
+     ]
+    }
+   ],
    "source": [
     "mD = np.matrix([[2, -4, 1, -2],\n",
     "                   [7, 8, 0, 3]])  \n",
@@ -74,16 +100,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix addition and subtraction\n",
+    "## Matrix addition and subtraction\n",
     "\n",
     "Lecture 4, slide 6, 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E + F =\n",
+      " [[ 6 -4]\n",
+      " [ 9  7]]\n",
+      "E - F =\n",
+      " [[-2 -4]\n",
+      " [ 5  9]]\n"
+     ]
+    }
+   ],
    "source": [
     "mE = np.matrix([[2, -4],\n",
     "                   [7, 8]])\n",
@@ -106,15 +145,27 @@
     "```{note}\n",
     "The two matrices must have the same dimension. If they do not, Python will give ValueError. \n",
     "\n",
-    "Adding mE (2 x 2) and mB (2 x 4): \n",
+    "For example when adding mE (2 x 2) and mB (2 x 4): \n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,2) (2,4) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-0e5ee78dd365>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmE\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mmB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,2) (2,4) "
+     ]
+    }
+   ],
    "source": [
     "pprint(mE + mB)"
    ]
@@ -123,16 +174,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix-matrix multiplication\n",
+    "## Matrix-matrix multiplication\n",
     "\n",
     "Lecture 4, slide 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E*H =\n",
+      " [[  0   4 -12  10]\n",
+      "  [ 44  -8  24  -9]\n",
+      " [ 16  -2   6  -1]]\n"
+     ]
+    }
+   ],
    "source": [
     "mE = np.matrix([[2, -4],\n",
     "                   [7, 8],\n",
@@ -148,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Matrix transpose\n",
+    "## Matrix transpose\n",
     "\n",
     "Lecture 4, slide 12, 13\n",
     "\n",
@@ -157,9 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The transpose of (non-square) B =\n",
+      "[[ 2  7  3] \n",
+      " [-4  8  2]]\n",
+      "The transpose of (square) B =\n",
+      "[[ 2  3  4] \n",
+      " [ 3 -1  2] \n",
+      " [-4  2  2]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Non-square matrix\n",
     "mB = np.matrix([[2, -4],\n",
@@ -184,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Identity matrix\n",
+    "## Identity matrix\n",
     "\n",
     "Lecture 4, slide 15\n",
     "\n",
@@ -193,9 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I=\n",
+      "[[1. 0. 0.] \n",
+      " [0. 1. 0.] \n",
+      " [0. 0. 1.]]\n",
+      "I*B =\n",
+      " [[ 2.  3. -4.]\n",
+      "  [ 3. -1.  2.]\n",
+      " [ 4.  2.  2.]]\n",
+      "B = I*B\n"
+     ]
+    }
+   ],
    "source": [
     "mI = np.identity(3)\n",
     "\n",
@@ -222,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Determinants\n",
+    "## Determinants\n",
     "\n",
     "Lecture 4, slide 16\n",
     "\n",
@@ -231,9 +323,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "det(D) = 17.00\n",
+      "det(A) = 17.00\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 x 2 example\n",
     "mD = np.matrix([[1, 4],\n",
@@ -253,16 +354,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solving systems of linear equations \n",
+    "## Solving systems of linear equations \n",
     "\n",
     "Finding solutions to linear equations using numpy.linalg.solve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The solution to Ax = b is:\n",
+      "[ 1.86956522  1.04347826 -0.7826087 ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up a system of the form Ax = b\n",
     "mA = np.matrix([[2, 3, -4],\n",
@@ -281,14 +391,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Existence of solutions"
+    "## Existence of solutions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinant of A = -46.000\n",
+      "The system Ax = b has a UNIQUE solution.\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the determinant of the square matrix A\n",
     "sDet = np.linalg.det(mA)\n",
@@ -303,16 +422,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inverse of a matrix\n",
+    "## Inverse of a matrix\n",
     "\n",
     "Computing the inverse of a matrix using numpy.linalg.inv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The inverse of A is:\n",
+      " [[ 0.13043478  0.30434783 -0.04347826]\n",
+      "  [-0.04347826 -0.43478261  0.34782609]\n",
+      " [-0.2173913  -0.17391304  0.23913043]]\n",
+      "A*A_inv=\n",
+      " [[ 1.00000000e+00  1.11022302e-16 -2.22044605e-16]\n",
+      "  [ 5.55111512e-17  1.00000000e+00  0.00000000e+00]\n",
+      " [ 5.55111512e-17  5.55111512e-17  1.00000000e+00]]\n",
+      "A*A_inv gives the identity matrix\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute the inverse of A\n",
     "mA_inv = np.linalg.inv(mA)\n",
