--- a/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "3) Now go to the terminal\n",
     "\n",
-    "4) Type  ```git clone LINKYOUCOPIED``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub  credentials.\n",
+    "4) Type  ```git clone <link>``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub  credentials.\n",
     "\n",
     "Congratulations, your repo is on your machine!"
    ]
@@ -67,11 +67,10 @@
     "## Basic Git commands\n",
     "\n",
     "Now we will go through different commands and their effect on the repository:\n",
-    "* ```git init``` - initalizes a new Git repository and begins tracking the directory. Adds a hidden subfloder required for the version control. Have a look at the exercises if you want to try it! \n",
     "\n",
-    "* ```git clone LINK``` - creates a copy of the repo on your machine. \n",
+    "* ```git clone <link>``` - creates a copy of the repo on your machine. \n",
     "\n",
-    "* ```git add FILE/DIRECTORY``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must to be added before the commit. It needs to be run with an argument e.g.:\n",
+    "* ```git add <file/directory>``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must to be added before the commit. It needs to be run with an argument e.g.:\n",
     "\n",
     "    &ensp;```git add text.txt``` - stages the ```text.txt``` file\n",
     "    \n",
@@ -85,7 +84,24 @@
     "\n",
     "* ```git pull``` - updates the local repository with the changes made on the remote one. If you work in a team and you friend commited code, you might want to ```git pull``` to have those changes on your machine.\n",
     "\n",
-    "* ```git push``` - updates the remote repository with your commits. **You need to us this command to update the code on GitHub**."
+    "* ```git push``` - updates the remote repository with your commits. **You need to us this command to update the code on GitHub**.\n",
+    "\n",
+    "\n",
+    "### Advanced commands:\n",
+    "\n",
+    "* ```git init``` - initalizes a new Git repository and begins tracking the directory. Adds a hidden subfloder required for the version control. Have a look at the exercises if you want to try it! \n",
+    "\n",
+    "* ```git stash``` - this command is used quite unfrequently. It locally saves the work that is not ready to commit and gives a clean working directory. For instance, when working on a new feature that’s not complete, but an urgent bug needs attention:\n",
+    "\n",
+    "    &ensp;```git stash -u``` - saves the untracked files a well\n",
+    "    \n",
+    "    &ensp;```git stash pop``` - brings th stashed work back to the directory\n",
+    "\n",
+    "* ```git fetch``` - downloads meta-data but does not change the files on your machine. It allows you which files are changes in the latast version of a branch, but does no implement those changes. Follwed by  ```git merge FETCH_HEAD``` works the same as  ```git pull```\n",
+    "\n",
+    "* ```git log``` - shows a chronological commit history for a repo.\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -143,9 +159,71 @@
     "\n",
     "* ```git branch``` - this command has multiple effects depending on the arguments:\n",
     "\n",
-    "    &ensp;```git branch``` - shows the branches being worked on locally\n",
-    "    &ensp;```git branch -a``` - \n"
+    "    &ensp;```git branch``` - shows the branches being worked on locally.\n",
+    "    &ensp;```git branch -a``` - shows remote and local branches.\n",
+    "    &ensp;```git branch <branch_name>``` - creates a new branch.\n",
+    "    &ensp;```git branch -d <branch_name>``` - deletes a branch.  \n",
+    "    \n",
+    "* ```git checkout``` - used to switch branches:\n",
+    "\n",
+    "    &ensp;```git checkout <branch_name>``` - move to an existing branch.\n",
+    "    &ensp;```git checkout -b <branch_name>``` - create a brnach and move to it.\n",
+    "    \n",
+    "* ```git merge <branch_name>``` - merges a a branch into the current working branch (```<branch_name>``` will no longer be an independent branch)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples\n",
+    "\n",
+    "------------------\n",
+    "* **Contributing** Now your repository is in the home directory. Now you will need to enter this directory on your machine:\n",
+    "\n",
+    "```shell\n",
+    "cd MyFirstRepoTutorial\n",
+    "```\n",
+    "Now we will create a new file in that folder:\n",
+    "\n",
+    "```shell\n",
+    "vim Hello.txt\n",
+    "```\n",
+    "\n",
+    "This will take you to the Vim text editor. Type ```i``` to enter the editing mode. Type some text, when finished type click the ```esc``` button. Then type ```w``` and enter. Finally type ```qa``` and enter. New file is created!\n",
+    "\n",
+    "Now type in terminal:\n",
+    "\n",
+    "```shell\n",
+    "git status\n",
+    "```\n",
+    "\n",
+    "This should tell you that ```Hello.txt``` is untracked. To change this:\n",
+    "\n",
+    "```shell\n",
+    "git add .\n",
+    "git status\n",
+    "```\n",
+    "Now the file is tracked, congrats! We now need to commit:\n",
+    "\n",
+    "\n",
+    "```shell\n",
+    "git commit -m 'Hello file created'\n",
+    "```\n",
+    "Finally:\n",
+    "\n",
+    "```shell\n",
+    "git push\n",
+    "```\n",
+    "Now your new file is on GitHub!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
