--- a/notebooks/modules/math_methods_1/ODEs.ipynb
+++ b/notebooks/modules/math_methods_1/ODEs.ipynb
@@ -19,9 +19,7 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import animation, rc\n",
-    "from IPython.display import HTML"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
