Split nm1 notebooks #5

--- a/notebooks/mathematics/numerical_methods/Numerical_differentiation.ipynb
+++ b/notebooks/mathematics/numerical_methods/Numerical_differentiation.ipynb
@@ -39,7 +39,7 @@
     " \n",
     "For example, we can turn the formal definition of a derivative given above into an approximation rule by replacing the limit as \\\\(h\\\\) approaches zero (i.e. the \\\\(\\text{lim}_{h\\rightarrow\\infty}\\\\)) with a small but finite \\\\(\\Delta x\\\\) value:\n",
     "\n",
-    "\\\\[ f'(x_0)\\approx \\frac{f(x_0+\\Delta x)-f(x_0)}{\\Delta x},\\;\\;\\;\\; \\Delta x>0. \\\\]\n",
+    "\\\\[ f'(x_0)\\approx \\frac{f(x_0+\\Delta x)-f(x_0)}{\\Delta x},\\quad \\Delta x>0. \\\\]\n",
     "\n",
     "Since this approximate gradient method uses values of \\\\(x\\\\) greater than \\\\(x_0\\\\) (\\\\(\\Delta x>0\\\\)), this algorithm is known as the **forward difference method**. \n",
     "\n",
