Split nm1 notebooks #6

--- a/notebooks/mathematics/numerical_methods/10_Roots_of_equations.ipynb
+++ b/notebooks/mathematics/numerical_methods/10_Roots_of_equations.ipynb
@@ -1058,6 +1058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_newton_method)=\n",
     "## Newton method\n",
     "\n",
     "So far, above iterative algorithms use only one part of a functions information: its value, \\\\(f(x)\\\\). Newton's method additionally uses \\\\(f'(x)\\\\) to infer the trend of the function in the vicinity of \\\\(x\\\\). This slope, together with the function value \\\\(f(x)\\\\), is used to find the intersection of the tangent at \\\\(x\\\\) with zero to get an improved guess of the root. The formula can be derived from the Taylor series expansion:\n",
@@ -1339,6 +1340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_quasi_newton_method)=\n",
     "## (Quasi-) Newton with approximate derivative\n",
     "The implementation of the Newton method above assumes that the derivative \\\\(f^\\prime(x)\\\\) is readily available.\n",
     "\n",
