--- a/notebooks/mathematics/numerical_methods/2_Numerical_differentiation.ipynb
+++ b/notebooks/mathematics/numerical_methods/2_Numerical_differentiation.ipynb
@@ -551,7 +551,7 @@
     "\n",
     "If we wanted to use all of this data, an alternative would be to fit a polynomial, and then differentiate this analytical expression exactly to approximate the derivative at any point between 0.84 and 1.16 (recalling that extrapolation is dangerous).\n",
     "````\n",
-    "\n",
+    "(nm_solving_diff_eq)=\n",
     "## Solving differential equations\n",
     "\n",
     "One of the most important applications of numerical mathematics in the sciences is the numerical solution of ordinary differential equations (ODEs). While the ODEs you will encounter during your mathematics modules are mostly solvable through analytical solutions, real world ODE are often in the form where it has been proven that no analytical solutions exists. However, many of these ODEs govern important physical processes, and thus, numerical solutions were found for these ODEs. \n",
