--- a/_sources/mathematics/numerical_methods/7_Solving_PDEs_SOR.ipynb
+++ b/_sources/mathematics/numerical_methods/7_Solving_PDEs_SOR.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(successive_over_relaxation)=\n",
-    "# Successive over-relaxation (SOR)\n",
+    "# Successive over-relaxation method\n",
     "```{index} SOR algorithm\n",
     "```\n",
     "A very large proportion of the world's supercomputing capacity is dedicated to solving {ref}`PDEs <pde_basic_partial_differentiation>` - climate and weather simulations, aerodynamics, structural simulations, etc.\n",
