--- a/_sources/mathematics/numerical_methods/8_Forward_time_centred_space.ipynb
+++ b/_sources/mathematics/numerical_methods/8_Forward_time_centred_space.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(ftcs_scheme)=\n",
-    "# Forward Time Centred Space (FTCS) scheme\n",
+    "# Forward Time Centred Space scheme\n",
     "```{index} FTCS scheme\n",
     "```\n",
     "[Forward Time Centred Space](https://en.wikipedia.org/wiki/FTCS_scheme) (FTCS) scheme is a method of solving {ref}`heat equation <heat_separation_of_variables>` (or in general parabolic PDEs). In this scheme, we approximate the spatial derivatives at the current time step and the time derivative between current and new time step:\n",
