--- a/_sources/mathematics/numerical_methods/9_Numerical_integration.ipynb
+++ b/_sources/mathematics/numerical_methods/9_Numerical_integration.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_num_integration)=\n",
     "# Numerical integration\n",
     "```{index} Numerical integration\n",
     "```\n",
@@ -131,6 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_midpoint_rule)=\n",
     "## Midpoint rule (rectangle method)\n",
     "\n",
     "The **midpoint rule** is perhaps the simplest quadrature rule. For reasons you will see below it is sometimes also called the **rectangle method**.\n",
@@ -484,6 +486,7 @@
     "\n",
     "* We want to use as few shapes as possible to approximate our function, because each additional rectangle is one extra time round the loop, which includes its own operations as well as an extra evaluation of the function, and hence increases the overall computational cost.\n",
     "\n",
+    "(nm_trapezoid_rule)=\n",
     "## Trapezoid rule\n",
     "\n",
     "As previously stated, the slices we use do not have to be rectangles, they can also be trapezoids. Rectangle rule is very similar to the **trapezoid rule** except for one small difference. \n",
@@ -820,6 +823,7 @@
     "```{margin}\n",
     "<img src=\"images_nm1/SIMPSONS.png\">\n",
     "```\n",
+    "(nm_simpsons_rule)=\n",
     "## Simpson's rule\n",
     "\n",
     "For our half sine wave, the rectangle method overestimates it by about 0.4%, while the trapezoid method underestimates it for 0.9%. We notice that in this situation, the rectangle method overestimates while the trapezoid method underestimates about twice the overestimate of the rectangle method. Could we combine this to obtain something more accurate?\n",
@@ -1128,6 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_composite_simpsons_rule)=\n",
     "## Composite Simpson's rule\n",
     "\n",
     "If we assume that our interval \\\\([a,b]\\\\) has been split up into \\\\(n\\\\) intervals (or \\\\(n+1\\\\) data points) we can save some function evaluations by writing Simpson's rule in the following form:\n",
@@ -1223,6 +1228,7 @@
    "source": [
     "This is a slight improvement for a simple function like \\\\(\\sin\\\\), but will be much more of an improvement for functions which oscillate more, in a relative sense compared to the size of our bins.\n",
     "\n",
+    "(nm_weddles_rule)=\n",
     "## Weddle's rule\n",
     "\n",
     "We noted above that Simpson's rule is fourth-order accurate. Suppose we take an approximation to \\\\(I\\\\) using \\\\(n\\\\) subintervals with Simpson's rule and call the result \\\\(I_S\\\\), and then apply Simpson's rule with double the number of intervals (\\\\(2n\\\\)) and call the result \\\\(I_{S_2}\\\\). \n",
