creating a new branch example

--- a/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Git branch commands\n",
+    "## Git branching commands\n",
     "\n",
     "Let us consider the commands dealing with branches:\n",
     "\n",
@@ -219,11 +219,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----------\n",
+    "* **Creating a new branch** To see the existing branches type:\n",
+    "\n",
+    "```shell\n",
+    "git branch -a\n",
+    "```\n",
+    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is used as a reference for newly cloning repos. Now our aim is to create a new branch and move to it, there are two ways to do this:\n",
+    "\n",
+    "First:\n",
+    "```shell\n",
+    "git branch new_branch\n",
+    "git checkout new_branch\n",
+    "```\n",
+    "\n",
+    "Second:\n",
+    "```shell\n",
+    "git branch new_branch\n",
+    "git checkout new_branch\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
