--- a/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/_sources/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Git branch commands\n",
+    "## Git branching commands\n",
     "\n",
     "Let us consider the commands dealing with branches:\n",
     "\n",
@@ -216,6 +216,89 @@
     "git push\n",
     "```\n",
     "Now your new file is on GitHub!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------\n",
+    "* **Creating a new branch** To see the existing branches type:\n",
+    "\n",
+    "```shell\n",
+    "git branch -a\n",
+    "```\n",
+    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is used as a reference for newly cloning repos. Now our aim is to create a new branch and move to it, there are two ways to do this:\n",
+    "\n",
+    "First:\n",
+    "```shell\n",
+    "#create a new shell\n",
+    "git branch new_branch\n",
+    "#move to it\n",
+    "git checkout new_branch\n",
+    "```\n",
+    "\n",
+    "Second:\n",
+    "```shell\n",
+    "git checkout -b new_branch\n",
+    "```\n",
+    "Now we have a new branch and we can edit it without affecting the code in the ```master```. To verify that we have created a branch:\n",
+    "```shell\n",
+    "git branch -a\n",
+    "```\n",
+    "\n",
+    "The ```new_branch``` is only present locally, to add it to GitHub:\n",
+    "```shell\n",
+    "git push --set-upstream origin new_branch\n",
+    "```\n",
+    "\n",
+    "Now let us edit the ```Hello.txt``` file from the first example. You can also use any other text editor of your choice, VS Code or even Notepad:\n",
+    "```shell\n",
+    "vim Hello.txt\n",
+    "```\n",
+    "Edit the file a little bit.\n",
+    "\n",
+    "Now contribute your changes:\n",
+    "```shell\n",
+    "git add Hello.txt\n",
+    "git commit -m 'Changed Hello.txt'\n",
+    "git push\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------------------\n",
+    "* **Switching branches**\n",
+    "\n",
+    "To verify that different branches containg different versions of the repository:\n",
+    "\n",
+    "```shell\n",
+    "git checkout master\n",
+    "```\n",
+    "Have a look at the file:\n",
+    "\n",
+    "```shell\n",
+    "cat Hello.txt\n",
+    "```\n",
+    "They are different, aren't they?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------\n",
+    "* **Merging** Now, we want to merge the ```new_branch``` back to the ```master```. As we are in the ```master``` this should be easy:\n",
+    "\n",
+    "```shell\n",
+    "git merge new_branch\n",
+    "```\n",
+    "You might be lucky and have no **merge conflicts** to deal with, if not, keep reading!\n",
+    "\n",
+    "\n"
    ]
   },
   {
