Split nm1 notebooks #7

--- a/notebooks/mathematics/numerical_methods/2_Numerical_differentiation.ipynb
+++ b/notebooks/mathematics/numerical_methods/2_Numerical_differentiation.ipynb
@@ -571,6 +571,8 @@
     "\n",
     "It is frequently useful to think of the independent variable, \\\\(t\\\\), as representing time. A numerical method steps forward in time units of \\\\(\\Delta t\\\\), attempting to calculate \\\\(u(t+\\Delta t)\\\\) in using the previously calculated value \\\\(u(t)\\\\).\n",
     "\n",
+    "More on timestepping an ODE can be found {ref}`here <timestepping_ode>`.\n",
+    "\n",
     "### Euler method\n",
     "\n",
     "Euler method is one of the simplest schemes to solve ODEs. You can find the notebook expanding on this method {ref}`here <nm_euler_method>`.\n",
