--- a/_sources/mathematics/numerical_methods/5_Runge_Kutta_method.ipynb
+++ b/_sources/mathematics/numerical_methods/5_Runge_Kutta_method.ipynb
@@ -653,6 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(nm_runge_kutta_higher_order_ode)=\n",
     "## Higher order ODEs\n",
     "Higher order ODEs are often encountered in nature. For example, diffusion and heat transfer are 2nd order ODEs. The order of an ODE indicates which derivatives it contains. Diffusion and heat transfer equations will therefire include second derivatives.\n",
     "\n",
